<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_take_picture"
        android:icon="@drawable/ic_action_new_picture"
        android:showAsAction="ifRoom"
        android:title="@string/action_take_picture" />

    <item
        android:id="@+id/action_radio_button"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_radio" />

    <item
        android:id="@+id/action_app_share"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_test_db"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_db" />
</menu>
